# hi_fastapi

./: .flake8  .gitignore  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 6ca631bd6060_add_timestamp_mixin.py  89f4c65419b2_init_database.py  e6a8e7cf7f6c_add_user_model.py  ee0eae2e43c3_init_database.py
app/: main.py
app/api/: api.py  deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: grades.py  login.py  schools.py  students.py  user.py  users.py
app/core/: config.py  identifier.py  security.py
app/crud/: __init__.py  base.py  grade.py  school.py  student.py  user.py
app/db/: base.py
app/models/: __init__.py  grade.py  school.py  student.py  user.py
app/schemas/: __init__.py  grade.py  school.py  student.py  user.py
